--- a/Changes
+++ b/Changes
@@ -3,6 +3,14 @@ Mithun Ayachit
 
 
 
+1.1.0
+
+
+-   Add TV support. Implemented by Sarah Fortune
+-   Remove JSON::Any in favor of JSON::MaybeXS
+
+
+
 1.0.1
 
 
