--- a/Changes
+++ b/Changes
@@ -3,6 +3,14 @@ Mithun Ayachit
 
 
 
+1.2.0
+
+
+-   Fix #4 Dies with 'Wide character in subroutine entry' in Session.pm
+-   Fix #5 Specifying a custom JSON object does not work
+
+
+
 1.1.2
 
 
